----------------------
phpMyAdmin - Changelog
----------------------

$Id$
$Source$

2004-08-16 Marc Delisle  <lem9@users.sourceforge.net>
    * all .../theme_right_css.php: bug #1009661, typo,
      thanks to Ryan Schmidt (ryandesign)

2004-08-16 Michal Čihař  <michal@cihar.com>
    * read_dump.php: Fix handling of comments -- and # (bug #1009494).

2004-08-15 Marc Delisle  <lem9@users.sourceforge.net>
    (Patches from Michael Keck)
    * left.php, queryframe.php, themes.php: bug #1005479: was using
      a hardcoded charset
    * themes/.../themes_left.css, /themes_right.css: new style for
      better vertical alignment

2004-08-13 Michal Čihař  <michal@cihar.com>
    * libraries/read_dump.lib.php: Fix possible undefined index (bug
      #1008232).
    * scripts/create-release.sh: Rename config.default to config.default.php.

2004-08-12 Michal Čihař  <michal@cihar.com>
    * db_details_structure.php: Inconsistency of drop/empty links (bug
      #989705).
    * tbl_addfield.php, tbl_properties.inc.php, tbl_properties_structure.php:
      Change look of adding fields into table (bug #991095).
    * many files: I again did some XHTML validation, so removed few of most
      obvious errors, but there are still many, mostly missing alt attributtes
      for images and wrongly nested tags.
    * left.php, queryframe.php: Replace htmlentities with htmlspecialchars
      (bug #1008002).
    * libraries/config_import.lib.php: Remove compatibility code for colors.
    * lang/czech: Improved message.\
    * main.php, themes.php, libraries/common.lib.php,
      libraries/defines.lib.php, libraries/select_theme.lib.php,
      themes/darkblue_orange/info.inc.php, themes/original/info.inc.php:
      Implemeted versioning and naming for themes (RFEs #991642 and #991645).
    * left.php: Use always natsort and not natcasesort in one case, it caused
      inconsistency (bug #1008120).

2004-08-11 Michal Čihař  <michal@cihar.com>